# -carradio

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SWITCH_STATEMENT_FIX.md  U8G2_DEPLOYMENT_README.md  U8G2_ERROR_EXPLANATION.md  U8G2_IMPLEMENTATION_README.md  U8G2_INTEGRATION_README.md  U8G2_INTEGRATION_SUMMARY.md  U8G2_LINKER_ERROR_FIX.md  U8G2_VFD_README.md  VFD_SH1106_Adapter.cpp  VFD_SH1106_Adapter.hpp  apply_u8g2_integration.sh  build.sh  build_pi.sh  build_test_u8g2_vfd.sh  deploy_u8g2_fixes.sh  deploy_u8g2_library.sh  example_raspberry_pi.cpp  fix_cmake_path.sh  fix_u8g2_deployment.sh  fix_u8g2_implementation.sh  fix_u8g2_implementation_v2.sh  fix_u8g2_linker_error.sh  fresh_u8g2_implementation.sh  i2c_scan.py  install_dependencies.sh  low_level_oled_test.py  manual_fix_instructions.md  setup_dsp.sh  setup_minmea.sh  setup_raspberry_pi.sh  test_display_types.cpp  test_u8g2_integration.sh  test_u8g2_vfd.cmake  u8g2_integration.patch  update_cmake_u8g2_path.sh
Assets/: README.md
python_implementation/: .gitignore  README.md  VFD_BRIDGE_README.md  VFD_Socket_Adapter.hpp  carradio-vfd-bridge.service  example.py  setup.py  setup_raspberry_pi.sh  test_vfd_bridge.py  vfd_bridge.py  vfd_sh1106_adapter.py
src/: ArgononeFan.cpp  AudioLineInput.hpp  AudioOutput.cpp  CANBusMgr.cpp  DisplayMgr.cpp  DisplayMgr.cpp.bak  DisplayMgr.hpp  DisplayMgr_showTime.patch  DisplayTest.cpp  DuppaKnob.cpp  DuppaKnob.hpp  DuppaLEDRing.cpp  EncoderBase.hpp  FrameDB.cpp  FrameDB.hpp  GPSmgr.cpp  GPSmgr.hpp  GenericEncoder.cpp  GenericEncoder.hpp  I2C.cpp  I2C.hpp  LCD1602_OLED.cpp  LCD1602_OLED.hpp  OBD2.cpp  PiCarMgr.cpp  PiCarMgr.hpp  RadioMgr.hpp  RotaryEncoder.cpp  RotaryEncoder.hpp  SH1106.cpp  SH1106.hpp  SSD1306.cpp  SSD1306.hpp  SSD1306_LCD.cpp  SSD1306_LCD.hpp  SSD1306_VFD.hpp  U8G2_VFD.hpp  U8G2_VFD_fixed.hpp  VFD.hpp  main.cpp  (+10 more)
